# ramanuq

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  bootstrap.sh  pyproject.toml  repro.sh  requirements.txt
.github/workflows/: ci.yml
data/calibrations/: calibrations.yaml
data/digitized/: cancado2011_v5_digitization_a.csv  cancado2011_v5_digitization_b.csv  fcnt_arxiv1711_fig1a.csv  nrgo_arxiv1902_fig5.csv  provenance.yaml
docs/: ai_usage_log.md  assumptions.md  calibration_provenance.md  contracts.md  cx3_review_day4.md  day6_briefing.md  day7_briefing.md  day8_briefing.md  day8_quiz.md  day9_quiz.md  disclosure_checklist.md  progress_journal.md  protocol.md  release_notes_v0.1.0.md  release_notes_v0.2.0.md  report_data.json  report_draft.md  report_template.md  tier!_read_day7.md  tier1_read_day5.md  tierB_realism_gate.md  validation_plan.md
docs/briefings/: day10_briefing.md  day10_quiz.md  day11_briefing.md  day11_quiz.md  day2_briefing.md  (+5 more)
notebooks/: 03_selector_q2.ipynb  04_mdc_casestudy_q3.ipynb
refimpl/: ref_criteria.py  ref_lineshapes.py  ref_mdc.py  ref_metrics.py  ref_selectors.py
scripts/: build_report.py  day6_analysis.py  figure_qa.py  make_all_figures.py  render_tierA.py  render_tierB.py  run_studies.py  standup.py
tests/: test_baseline.py  test_despike.py  test_differential_v6.py  test_f10.py  test_fit.py  test_fit_recovery.py  test_grid.py  test_hostile.py  test_io.py  test_lineshapes.py  test_mdc.py  test_metrics.py  test_model.py  test_reporting_v5b.py  test_robust.py  test_selectors.py  test_smoke.py  test_synth.py
(+307 files in other folders)
