[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramanuq"
version = "0.0.0"
description = "A research package for quantitative Raman spectral analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "lmfit",
    "matplotlib",
    "pyyaml",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
